--- a/settings.ini
+++ b/settings.ini
@@ -1,18 +1,18 @@
 [DEFAULT]
 # All sections below are required unless otherwise specified
 host = github
-lib_name = {lib_name}
+lib_name = nbdev_template
 # For Enterprise Git add variable repo_name and company name
-# repo_name = analytics
+repo_name = analytics
 # company_name = nike
 
-user = {user}
-# description = A description of your project
-# keywords = some keywords
-author = {author}
-author_email = {author_email}
-# copyright = Put your copyright information here
-branch = {branch}
+user = biqing-zhu
+description = A description of your project
+keywords = some keywords
+author = Biqing Zhu
+author_email = biqing.zhu@yale.edu
+copyright = Put your copyright information here
+branch = master
 version = 0.0.1
 min_python = 3.6
 audience = Developers
